infra/manifests/deploy/bentoml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bento-serving
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bento-serving
  template:
    metadata:
      labels:
        app: bento-serving
    spec:
      containers:
        - name: bentoml
          image: tennis-ml-registry:5000/bento-serving:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 120
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 120
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: bento-serving
  labels:
    app: bento-serving
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: bento-serving
